# Blender-MCP-antigravity

./: .gitignore  LICENSE  README.md  antigravity_blender_addon.py  antigravity_blender_server.py  blender_server.py  create_island_from_image.py  generate_island.py  pyproject.toml  run_via_bridge.py  scene_plan.md  walkthrough.md
