[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blender-mcp"
version = "1.0.0"
description = "MCP server for AI-powered Blender control - Create 3D models from images and execute Python scripts in Blender"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Antigravity", email = "hello@antigravity.dev" }
]
keywords = [
    "blender",
    "mcp",
    "model-context-protocol",
    "3d-modeling",
    "ai",
    "antigravity",
    "image-to-3d"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/antigravity/blender-mcp"
Documentation = "https://github.com/antigravity/blender-mcp#readme"
Repository = "https://github.com/antigravity/blender-mcp"
Issues = "https://github.com/antigravity/blender-mcp/issues"

[project.scripts]
blender-mcp = "antigravity_blender_server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
